--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "bh.blishhud": ">=1.0.0"
   },
-  "url": "https://github.com/JoeMylinn",
+  "url": "https://github.com/JoeMylinn/LegendaryArmory",
   "contributors": [
     {
       "name": "Joe",
